rust/documents/src/snapshots/documents__tests__md_articles@code-relations.md-assemble.snap
---
source: rust/documents/src/tests.rs
assertion_line: 66
expression: "&address_map"
---
{
  "cf-1": [
    "content",
    0,
    "content",
    1
  ],
  "cf-2": [
    "content",
    0,
    "content",
    3
  ],
  "cf-3": [
    "content",
    0,
    "content",
    5
  ],
  "cf-4": [
    "content",
    0,
    "content",
    7
  ],
  "cf-5": [
    "content",
    1,
    "content",
    1
  ],
  "cf-6": [
    "content",
    1,
    "content",
    3
  ],
  "cf-7": [
    "content",
    1,
    "content",
    5
  ],
  "cc-1": [
    "content",
    2
  ],
  "cf-8": [
    "content",
    3,
    "content",
    1
  ],
  "cc-2": [
    "content",
    4
  ],
  "cf-9": [
    "content",
    5,
    "content",
    1
  ],
  "ce-1": [
    "content",
    5,
    "content",
    3
  ],
  "ce-2": [
    "content",
    5,
    "content",
    5
  ],
  "cf-10": [
    "content",
    6,
    "content",
    1
  ],
  "cf-11": [
    "content",
    6,
    "content",
    3
  ],
  "cc-3": [
    "content",
    7
  ],
  "ce-3": [
    "content",
    8,
    "content",
    1
  ],
  "ce-4": [
    "content",
    8,
    "content",
    3
  ],
  "cf-12": [
    "content",
    9,
    "content",
    1
  ],
  "cf-13": [
    "content",
    9,
    "content",
    3
  ],
  "pa-1": [
    "content",
    9,
    "content",
    5
  ],
  "cc-4": [
    "content",
    11
  ]
}
