rust/documents/src/snapshots/documents__tests__md_articles@code-relations.md-compile.snap
---
source: rust/documents/src/tests.rs
assertion_line: 82
expression: "&graph"
---
{
  "nodes": [
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-4",
      "kind": "CodeChunk",
      "language": "calc",
      "dependencies": 6,
      "depth": 4,
      "compile_digest": "3894522473690053649.3064020986591757252.13296612083283731109.3.0",
      "index": 0
    },
    {
      "type": "Symbol",
      "path": "",
      "name": "a",
      "kind": "Number",
      "dependencies": 1,
      "dependents": 8,
      "depth": 1,
      "compile_digest": "0.0.3683281318082465071.1.0",
      "index": 1
    },
    {
      "type": "Symbol",
      "path": "",
      "name": "b",
      "kind": "Number",
      "dependencies": 3,
      "dependents": 3,
      "depth": 3,
      "compile_digest": "0.0.15800464523240391870.1.0",
      "index": 2
    },
    {
      "type": "Symbol",
      "path": "",
      "name": "c",
      "kind": "Number",
      "dependencies": 1,
      "dependents": 1,
      "depth": 1,
      "compile_digest": "0.0.16269303063320466662.1.0",
      "index": 3
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "pa-1",
      "kind": "Parameter",
      "language": "json",
      "dependencies": 0,
      "dependents": 2,
      "depth": 0,
      "execute_pure": false,
      "compile_digest": "2929670310044459792.6473431330112736658.0.0.0",
      "index": 4
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-4",
      "kind": "CodeExpression",
      "language": "calc",
      "dependencies": 4,
      "depth": 4,
      "compile_digest": "2993544518503473449.17057874873997538463.6170967268824451325.1.0",
      "index": 5
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-3",
      "kind": "CodeExpression",
      "language": "calc",
      "dependencies": 4,
      "depth": 4,
      "compile_digest": "14319809613103427217.5584834878793570800.6170967268824451325.1.0",
      "index": 6
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-3",
      "kind": "CodeChunk",
      "language": "calc",
      "dependencies": 2,
      "dependents": 4,
      "depth": 2,
      "execute_auto": "Never",
      "compile_digest": "16211924891031318050.4826985045600982618.10855079609699597019.1.0",
      "index": 7
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-2",
      "kind": "CodeExpression",
      "language": "calc",
      "dependencies": 2,
      "depth": 2,
      "compile_digest": "5376003846207966692.7442174387065919531.10855079609699597019.1.0",
      "index": 8
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-1",
      "kind": "CodeExpression",
      "language": "calc",
      "dependencies": 2,
      "depth": 2,
      "compile_digest": "1195711327746707359.14434809801808754219.10855079609699597019.1.0",
      "index": 9
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-2",
      "kind": "CodeChunk",
      "language": "calc",
      "dependencies": 2,
      "depth": 2,
      "compile_digest": "16686659887221966787.8748471189156309820.10855079609699597019.1.0",
      "index": 10
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-1",
      "kind": "CodeChunk",
      "language": "calc",
      "dependencies": 0,
      "dependents": 9,
      "depth": 0,
      "execute_auto": "Always",
      "compile_digest": "9316405199738436605.13978852262712383813.0.0.0",
      "index": 11
    }
  ],
  "edges": [
    {
      "from": 1,
      "to": 0,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 2,
      "to": 0,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          4,
          0,
          5
        ]
      }
    },
    {
      "from": 3,
      "to": 0,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          8,
          0,
          9
        ]
      }
    },
    {
      "from": 4,
      "to": 3,
      "relation": {
        "type": "Assigns",
        "range": [
          0,
          0,
          0,
          0
        ]
      }
    },
    {
      "from": 2,
      "to": 5,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 2,
      "to": 6,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 7,
      "to": 2,
      "relation": {
        "type": "Assigns",
        "range": [
          1,
          0,
          1,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 7,
      "relation": {
        "type": "Uses",
        "range": [
          1,
          4,
          1,
          5
        ]
      }
    },
    {
      "from": 1,
      "to": 8,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 9,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 10,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 11,
      "to": 1,
      "relation": {
        "type": "Assigns",
        "range": [
          1,
          0,
          1,
          1
        ]
      }
    }
  ]
}
