rust/documents/src/snapshots/documents__tests__md_articles@code.md-topological-concurrency-0.snap
---
source: rust/documents/src/tests.rs
assertion_line: 122
expression: "&plan"
---
{
  "options": {
    "ordering": "Topological",
    "max_concurrency": 0
  },
  "stages": []
}
